# kitti360Scripts

./: .gitignore  LICENSE  README.md  license.txt  setup.py
kitti360scripts/devkits/: README.md
kitti360scripts/devkits/accumuLaser/: CMakeLists.txt  README.md
kitti360scripts/devkits/accumuLaser/cmake/: FindOpenCV.cmake
kitti360scripts/devkits/accumuLaser/src/: accumulation.cpp  accumulation.h  commons.cpp  commons.h  kdtree_nano.h  main.cpp  matrix.cpp  nanoflann.hpp  utils.cpp  utils.h
kitti360scripts/devkits/commons/: loadCalibration.py
kitti360scripts/devkits/convertOxtsPose/: .gitignore
kitti360scripts/devkits/convertOxtsPose/matlab/: convertOxtsToPose.m  convertPoseToOxts.m  latToScale.m  latlonToMercator.m  loadOxtsData.m  loadPoses.m  loadTimestamps.m  mercatorToLatlon.m  postprocessPoses.m  testOxtsToPose.m  testPoseToOxts.m
kitti360scripts/devkits/convertOxtsPose/python/: convertOxtsToPose.py  convertPoseToOxts.py  data.py  testOxtsToPose.py  testPoseToOxts.py  utils.py
kitti360scripts/devkits/scripts/: run_accumulation.sh
kitti360scripts/devkits/singularity/: accumuLaser.recipe  install_opencv.sh
kitti360scripts/evaluation/: addToConfusionMatrix.pyx  addToConfusionMatrix_impl.c
kitti360scripts/evaluation/novel_view_synthesis/: README.md  evalNovelViewSynthesis.py  metric.py
kitti360scripts/evaluation/novel_view_synthesis/data/: 2013_05_28_drive_train_drop50_frames.txt
kitti360scripts/evaluation/semantic_2d/: README.md  evalInstanceLevelSemanticLabeling.py  evalPixelLevelSemanticLabeling.py  evalPixelLevelSemanticLabeling_updated.py  instance.py  instances2dict.py
kitti360scripts/evaluation/semantic_3d/: README.md  evalDetection.py  evalInstanceLevelSemanticLabeling.py  evalPointLevelSemanticLabeling.py  evalSceneCompletion.py  prepare_train_val_windows.py
kitti360scripts/evaluation/semantic_slam/: CMakeLists.txt  README.md  evalSemanticSLAM.sh  evalTrajectory.sh
kitti360scripts/evaluation/semantic_slam/sparsify/: CMakeLists.txt  README.md  kdtree.cpp  main.cpp  run.sh  utils.cpp  utils.h
kitti360scripts/evaluation/semantic_slam/src/: accuracy.cc  accuracy.h  commons.cpp  commons.h  completeness.cc  completeness.h  main.cc  pose.cc  pose.h  semantic.cc  semantic.h  util.h
kitti360scripts/evaluation/semantic_slam/test_data/orbslam/: test_poses_0.txt  test_poses_1.txt  test_poses_2.txt  test_poses_3.txt
kitti360scripts/evaluation/semantic_slam/test_data/semantic_suma/: test_poses_0.txt  test_poses_1.txt  test_poses_2.txt  test_poses_3.txt
kitti360scripts/helpers/: annotation.py  csHelpers.py  curlVelodyneData.pyx  curlVelodyneData_impl.c  data.py  labels.py  ply.py  pointcloud.py  project.py
kitti360scripts/viewer/: kitti360Viewer.py  kitti360Viewer3D.py  kitti360Viewer3DRaw.py
